Fix dropdown list items categories  overflow bug

--- a/app/assets/stylesheets/account/account.scss
+++ b/app/assets/stylesheets/account/account.scss
@@ -25,6 +25,10 @@
             text-decoration: underline;
             background-color: #eee8e6;
             border: none;
+            &:hover {
+                cursor: pointer;
+                user-select: none;
+            }
         }
     }
 }
